samples/_failures_safe/1761162836_bb8c21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11558bb5.c: In function ‘tokenize’:
./samples/SAFE/__tmp_11558bb5.c:162:32: error: expected ‘;’ at end of input
  162 |             tokens[token_count]
      |                                ^
      |                                ;
./samples/SAFE/__tmp_11558bb5.c:162:13: error: expected declaration or statement at end of input
  162 |             tokens[token_count]
      |             ^~~~~~
./samples/SAFE/__tmp_11558bb5.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_11558bb5.c:162:13: error: expected declaration or statement at end of input
